// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateContact > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-0"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="!-mx-4 !mt-4 !p-4 css-1mwq138"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-0-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-0-input"
                              id="downshift-0-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-0-menu"
                                  aria-labelledby="downshift-0-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-0-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-0-label"
                            id="downshift-0-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                  <div
                    class="group"
                  >
                    <div
                      data-testid="contact-form__address-list"
                    >
                      <div
                        class="mt-2 flex items-center justify-between overflow-hidden rounded border border-theme-secondary-300 bg-white first:mt-0 last:pb-0 dark:border-theme-secondary-800 dark:bg-black sm:mt-0 sm:rounded-none sm:border-x-0 sm:border-b-0 sm:border-t sm:border-dashed sm:bg-transparent sm:py-3 dark:sm:bg-transparent"
                        data-testid="contact-form__address-list-item"
                      >
                        <div
                          class="w-full min-w-0"
                        >
                          <div
                            class="flex items-center justify-between bg-theme-secondary-100 px-4 py-3 dark:bg-theme-secondary-900 sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          >
                            <div
                              class="text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:mb-2"
                            >
                              ARK Devnet
                            </div>
                            <button
                              class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none p-0 text-theme-secondary-700 dark:text-theme-secondary-500 sm:!hidden"
                              data-testid="contact-form__remove-address-btn-xs"
                              type="button"
                            >
                              <div
                                class="flex items-center space-x-2"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg
                                    id="trash"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                          <div
                            class="px-4 pb-4 pt-3 sm:p-0"
                          >
                            <div
                              class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:hidden"
                            >
                              Address
                            </div>
                            <span
                              class="flex-1 truncate font-semibold"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:text-base sm:leading-5 font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                                </span>
                              </div>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 hidden items-center p-3.5 sm:flex"
                          data-testid="contact-form__remove-address-btn"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg
                                id="trash"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 justify-between"
                >
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-0"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="!-mx-4 !mt-4 !p-4 css-1mwq138"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-2-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-2-input"
                              id="downshift-2-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-2-menu"
                                  aria-labelledby="downshift-2-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-2-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-2-label"
                            id="downshift-2-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                  <div
                    class="group"
                  >
                    <div
                      data-testid="contact-form__address-list"
                    >
                      <div
                        class="mt-2 flex items-center justify-between overflow-hidden rounded border border-theme-secondary-300 bg-white first:mt-0 last:pb-0 dark:border-theme-secondary-800 dark:bg-black sm:mt-0 sm:rounded-none sm:border-x-0 sm:border-b-0 sm:border-t sm:border-dashed sm:bg-transparent sm:py-3 dark:sm:bg-transparent"
                        data-testid="contact-form__address-list-item"
                      >
                        <div
                          class="w-full min-w-0"
                        >
                          <div
                            class="flex items-center justify-between bg-theme-secondary-100 px-4 py-3 dark:bg-theme-secondary-900 sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          >
                            <div
                              class="text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:mb-2"
                            >
                              ARK Devnet
                            </div>
                            <button
                              class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none p-0 text-theme-secondary-700 dark:text-theme-secondary-500 sm:!hidden"
                              data-testid="contact-form__remove-address-btn-xs"
                              type="button"
                            >
                              <div
                                class="flex items-center space-x-2"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg
                                    id="trash"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                          <div
                            class="px-4 pb-4 pt-3 sm:p-0"
                          >
                            <div
                              class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:hidden"
                            >
                              Address
                            </div>
                            <span
                              class="flex-1 truncate font-semibold"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:text-base sm:leading-5 font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                                </span>
                              </div>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 hidden items-center p-3.5 sm:flex"
                          data-testid="contact-form__remove-address-btn"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg
                                id="trash"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 justify-between"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 mt-0 h-min sm:mt-8"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="trash"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                            />
                          </g>
                        </svg>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1jzz0qm"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line pr-10 text-sm text-theme-secondary-text md:pr-0 md:text-base"
            >
              Enter the information below to update or delete the Contact.
            </div>
            <div
              class="mt-8"
            >
              <form
                class="space-y-0"
                data-testid="contact-form"
              >
                <fieldset
                  class="flex min-w-0 flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class=" css-n1b0kl"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1vs1awz"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="!-mx-4 !mt-4 !p-4 css-1mwq138"
                >
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-n1b0kl"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="select-list__input"
                            name="network"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="downshift-4-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="downshift-4-input"
                              id="downshift-4-label"
                            />
                            <div
                              class="css-n1b0kl"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="downshift-4-menu"
                                  aria-labelledby="downshift-4-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                                  data-testid="SelectDropdown__input"
                                  id="downshift-4-input"
                                  name="network"
                                  placeholder="Enter a cryptoasset name"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center px-1 py-2"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="absolute inset-0 block cursor-pointer md:hidden"
                                      />
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg
                                          id="caret-down"
                                          viewBox="0 0 10 10"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <path
                                            d="M9.093 1.5H.907c-.754 0-1.178.859-.714 1.447l4.108 5.208a.91.91 0 0 0 1.43-.002l4.078-5.208c.46-.589.037-1.445-.716-1.445z"
                                            fill="currentColor"
                                          />
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="downshift-4-label"
                            id="downshift-4-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex min-w-0 flex-col css-1bcidjh"
                    data-testid="ContactForm__address"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="address"
                    >
                      Address
                    </label>
                    <div
                      class="css-n1b0kl"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1vs1awz"
                          data-testid="contact-form__address-input"
                          name="address"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <div
                    class="mt-4"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full"
                      data-testid="contact-form__add-address-btn"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Add Address
                      </div>
                    </button>
                  </div>
                  <div
                    class="group"
                  >
                    <div
                      data-testid="contact-form__address-list"
                    >
                      <div
                        class="mt-2 flex items-center justify-between overflow-hidden rounded border border-theme-secondary-300 bg-white first:mt-0 last:pb-0 dark:border-theme-secondary-800 dark:bg-black sm:mt-0 sm:rounded-none sm:border-x-0 sm:border-b-0 sm:border-t sm:border-dashed sm:bg-transparent sm:py-3 dark:sm:bg-transparent"
                        data-testid="contact-form__address-list-item"
                      >
                        <div
                          class="w-full min-w-0"
                        >
                          <div
                            class="flex items-center justify-between bg-theme-secondary-100 px-4 py-3 dark:bg-theme-secondary-900 sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
                          >
                            <div
                              class="text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:mb-2"
                            >
                              ARK Devnet
                            </div>
                            <button
                              class="relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none p-0 text-theme-secondary-700 dark:text-theme-secondary-500 sm:!hidden"
                              data-testid="contact-form__remove-address-btn-xs"
                              type="button"
                            >
                              <div
                                class="flex items-center space-x-2"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg
                                    id="trash"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                          <div
                            class="px-4 pb-4 pt-3 sm:p-0"
                          >
                            <div
                              class="mb-2 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:hidden"
                            >
                              Address
                            </div>
                            <span
                              class="flex-1 truncate font-semibold"
                            >
                              <div
                                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                              >
                                <span
                                  class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:text-base sm:leading-5 font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                                </span>
                              </div>
                            </span>
                          </div>
                        </div>
                        <button
                          class="relative justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 hidden items-center p-3.5 sm:flex"
                          data-testid="contact-form__remove-address-btn"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg
                                id="trash"
                                viewBox="0 0 20 20"
                                x="0"
                                xml:space="preserve"
                                xmlns="http://www.w3.org/2000/svg"
                                y="0"
                              >
                                <g
                                  fill="none"
                                  stroke="currentColor"
                                  stroke-linecap="round"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                >
                                  <path
                                    d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                                  />
                                </g>
                              </svg>
                            </div>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800 justify-between"
                >
                  <button
                    class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 disabled:cursor-not-allowed rounded bg-theme-danger-100 text-theme-danger-400 dark:bg-theme-danger-400 dark:text-white hover:bg-theme-danger-400 hover:text-white dark:hover:bg-theme-danger-500 focus:ring-theme-danger-300 mt-0 h-min sm:mt-8"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg
                          id="trash"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                            />
                          </g>
                        </svg>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="css-j6ajdm"
                  >
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
